--- a/Gabay-Final-V2/Views/DashBoard/Student_Homepage/Student_Master.Master
+++ b/Gabay-Final-V2/Views/DashBoard/Student_Homepage/Student_Master.Master
@@ -125,10 +125,10 @@
                                 </asp:HyperLink>
                         </li>
                         <li class="nav-item p-1">
-                            <asp:HyperLink ID="HyperLink4" runat="server" CssClass="topnav-item text-cente custom-text-color">
-                                  <i class="bi bi-person-circle"></i>
-                                  <span class="mt-2">Profile</span>
-                                </asp:HyperLink>
+                            <asp:LinkButton ID="prflBtn" runat="server" CssClass="topnav-item text-cente custom-text-color" OnClick="prflBtn_Click">
+                                   <i class="bi bi-person-circle"></i>
+                                   <span class="mt-2">Profile</span>
+                                </asp:LinkButton>
                         </li>
                         <li class="nav-item p-1">
                             <asp:LinkButton ID="logoutLink" runat="server" CssClass="topnav-item text-cente custom-text-color" OnClick="logoutLink_Click">
@@ -143,7 +143,7 @@
                     <asp:Label ID="lblNotificationCount" runat="server" CssClass="icon-button__badge"></asp:Label>
                 </div>
                 <div class="d-none d-lg-block" id="lgout-prfl_btn">
-                    <asp:Button ID="profileBtn" runat="server" Text="Profile" CssClass="btn logout-profileBtn " UseSubmitBehavior="false" />
+                    <asp:HyperLink ID="profileBtn" runat="server" CssClass="btn logout-profileBtn" UseSubmitBehavior="false" NavigateUrl="~/Views/DashBoard/Student_Homepage/Student_profile.aspx">Profile</asp:HyperLink>
                     <asp:Button ID="logoutBtn" runat="server" Text="Logout" CssClass="btn logout-profileBtn " UseSubmitBehavior="false" OnClick="logoutBtn_Click" />
                 </div>
             </nav>
@@ -237,7 +237,7 @@
                     </div>
                     <div class="modal-footer">
                         <asp:Button ID="btnMarkAsRead" runat="server" Text="Read" CssClass="btn btn-primary" OnClientClick="hideBadge(); return true;" OnClick="BtnMarkAsRead_Click" />
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <%-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>--%>
                     </div>
                 </div>
             </div>
@@ -247,28 +247,55 @@
 
     </form>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script>
-    function GetUnreadNotifications() {
-        $.ajax({
-            type: "POST",
-            url: "Student_Master.Master/GetUnreadNotificationsDataTableFromDatabase",
-            contentType: "application/json; charset=utf-8",
-            dataType: "json",
-            success: function (result) {
-                // Update the badge content with the count of unread notifications
-                updateBadge(result.d.Count);
+    <script>
+        function GetUnreadNotifications() {
+            $.ajax({
+                type: "POST",
+                url: "Student_Master.Master/GetUnreadNotificationsDataTableFromDatabase",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (result) {
+                    // Check if there are unread notifications
+                    if (result.d.Count > 0) {
+                        // Update the badge content with the count of unread notifications
+                        updateBadge(result.d.Count);
 
-                // Bind the data to the GridView
-                notificationGridView.DataSource = result.d.Data;
-                notificationGridView.DataBind();
-            },
-            error: function (xhr, ajaxOptions, thrownError) {
-                console.error(thrownError);
+                        // Bind the data to the GridView
+                        notificationGridView.DataSource = result.d.Data;
+                        notificationGridView.DataBind();
+
+                        // Show the modal
+                        $('#notificationModal').modal('show');
+                    } else {
+                        // If count is 0, hide or style the badge accordingly
+                        hideBadge();
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    console.error(thrownError);
+                }
+            });
+        }
+
+        function hideBadge() {
+            // Get the label element representing the badge
+            var badgeLabel = document.getElementById('<%= lblNotificationCount.ClientID %>');
+
+            // Check if the badge label exists
+            if (badgeLabel) {
+                // Check if the count is zero
+                if (parseInt(badgeLabel.innerHTML) === 0) {
+                    // If count is zero, make the badge invisible
+                    badgeLabel.style.display = 'none';
+                } else {
+                    // If count is not zero, set background color to red
+                    badgeLabel.style.backgroundColor = 'red';
+                }
             }
-        });
-    }
+        }
 
-</script>
+
+    </script>
 
 
 
